# wpx

./: .gitignore  Cargo.toml  test.typ
backend/: Cargo.toml  download-osm.sh  old.md  polyline.md  quadtree.md  run.sh
backend/data/: cities-small.json  cities-south.json  jerome-orig.gpx  jerome.gpx  moutain-pass-south.json  test.typ  village-small.json  village-test.json
backend/data/ref/: 600.gpx  berlin.gpx  boucle.gpx  karl-400.gpx  pbp2023-carhais.gpx  roland-nowaypoints.gpx  roland.gpx  winni.gpx
backend/data/ref/cache/: 008-060  008-061  008-062  009-060  009-061  009-062  010-060  011-060  10-60  8-61  8-62  9-61  9-62
backend/data/ref/cache/6050000+1040000-6060000+1050000/: data
backend/data/ref/cache/6050000+1050000-6060000+1060000/: data
backend/data/ref/cache/6050000+1060000-6060000+1070000/: data
backend/data/ref/cache/6050000+1070000-6060000+1080000/: data
backend/data/ref/cache/6050000+1080000-6060000+1090000/: data
backend/data/ref/cache/6050000+1090000-6060000+1100000/: data
backend/data/ref/cache/6050000+1100000-6060000+1110000/: data
backend/data/ref/cache/6050000+1110000-6060000+1120000/: data
backend/data/ref/cache/6050000+1120000-6060000+1130000/: data
backend/data/ref/cache/6060000+1040000-6070000+1050000/: data
backend/data/ref/cache/6060000+1050000-6070000+1060000/: data
backend/data/ref/cache/6060000+1060000-6070000+1070000/: data
backend/data/ref/cache/6060000+1070000-6070000+1080000/: data
backend/data/ref/cache/6060000+1080000-6070000+1090000/: data
backend/data/ref/cache/6060000+1090000-6070000+1100000/: data
backend/data/ref/cache/6060000+1100000-6070000+1110000/: data
backend/data/ref/cache/6060000+1110000-6070000+1120000/: data
backend/data/ref/cache/6060000+1120000-6070000+1130000/: data
backend/data/ref/cache/6070000+1040000-6080000+1050000/: data
backend/data/ref/cache/6070000+1050000-6080000+1060000/: data
backend/data/ref/cache/6070000+1060000-6080000+1070000/: data
backend/data/ref/cache/6070000+1070000-6080000+1080000/: data
backend/data/ref/cache/6070000+1080000-6080000+1090000/: data
backend/data/ref/cache/6070000+1090000-6080000+1100000/: data
backend/data/ref/cache/6070000+1100000-6080000+1110000/: data
backend/data/ref/cache/6070000+1110000-6080000+1120000/: data
backend/data/ref/cache/6070000+1120000-6080000+1130000/: data
backend/data/ref/cache/6080000+1040000-6090000+1050000/: data
backend/data/ref/overpass/: dl.txt
backend/limbo/: automatic.rs  waypoint_values.rs
backend/src/: automatic.rs  backend.rs  bbox.rs  bboxes.rs  controls.rs  elevation.rs  error.rs  event.rs  format.rs  gpsdata.rs  gpsdata_osm.rs  gpxexport.rs  hide-weights.rs  inputpoint.rs  label_candidates.rs  label_graph.rs  label_placement.rs  lib.rs  locate.rs  main.rs  make_points.rs  math.rs  mercator.rs  osmpoint.rs  parameters.rs  pdf.rs  project.rs  render.rs  render_device.rs  segment.rs  speed.rs  step.rs  svgmap.rs  svgprofile.rs  tile.rs  track.rs  track_projection.rs  utm.rs  waypoint.rs  waypoint_values.rs  (+5 more)
backend/src/bbox/: mod.rs  quadtree.rs
backend/src/label_placement/: bbox.rs  candidate.rs  drawings.rs  features.rs  graph.rs  mod.rs  prioritize.rs  stroke.rs
backend/src/osm/: cache.rs  download.rs  filesystem.rs  indexdb.rs  mod.rs  osmpoint.rs
backend/src/pdf/: local.rs  mod.rs  wasm.rs
backend/src/profile/: elements.rs  mod.rs  ticks.rs
backend/src/wheel/: arc.rs  mod.rs  model.rs  shorten.rs  text.rs  time_points.rs
backend/svg/test-svg/: Cargo.toml
backend/svg/test-svg/src/: main.rs
backend/templates/: header.typ  table-large.typ  table-points.typ
frontend/ui/rust/: Cargo.toml
frontend/ui/rust/src/: frb_generated.rs  lib.rs  setup.rs
server/: Cargo.toml  README.md  deploy.sh
server/src/: main.rs
(+991 files in other folders)
