[package]
name = "tracks"
edition = "2021"
version = "0.1.0"

[dependencies]
geo = "0.29.3"
gpx = "0.10.0"
kd-tree = "0.6.0"
proj4rs = "0.1.5"
svg = "0.18.0"
tempfile = "3.19.1"
typenum = "1.18.0"
chrono = "0.4.41"
typst-as-lib = { version = "0.14.4", features = ["typst-kit-embed-fonts", "typst-kit-fonts"], optional=true }
typst-pdf = { version = "0.13.1", optional=true}
clap = { version = "4.5", features = ["derive"] }

[features]
# default = ["typstpdf"]
typstpdf = ["dep:typst-as-lib","dep:typst-pdf"]
