[package]
name = "rust_lib_ui"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
anyhow = "1.0.99"
flutter_rust_bridge = "=2.11.1"
tokio = { version = "1.45", features = ["time"] }
#tracks = { version = "*", path = "../../../backend", features=["typstpdf"] }
tracks = { version = "*", path = "../../../backend" }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
