[package]
name = "rust_lib_ui"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
anyhow = "1.0.99"
chrono = "0.4.42"
env_logger = "0.11.8"
flutter_rust_bridge = "=2.11.1"
log = "0.4.28"
tokio = { version = "1.45", features = ["time"] }
#tracks = { version = "*", path = "../../../backend", features=["typstpdf"] }
tracks = { version = "*", path = "../../../backend" }


[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
